refactor: user record class & Builder for all DTOs, fix tests for all Mappers